# tg

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md  build.rs  release.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Formula/: tgreader.rb
docs/: refresh-index-redesign.md  user-workflow-design.md
scripts/: install.sh  perf_regression.sh  release.sh
src/: cache.rs  completion.rs  completion_values.rs  contact.rs  database_keys.rs  db.rs  decrypt.rs  dictionary.rs  doctor.rs  export.rs  index_policy.rs  key_material.rs  logger.rs  main.rs  media.rs  media_decrypt.rs  media_index.rs  media_key.rs  media_pb.rs  message.rs  message_index.rs  output.rs  parallel.rs  paths.rs  query.rs  row_identity.rs  scanner.rs  skill.rs  time.rs
src/scanner/: elf_locator.rs  gdb.rs  linux_process.rs  lldb.rs
