[package]
name = "tgreader"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to read Telegram messages from local databases"

[[bin]]
name = "tgreader"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
md-5 = "0.10"
hex = "0.4"
cipher = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
