[package]
name = "tgreader"
version = "0.1.0"
edition = "2021"
description = "macOS Telegram 聊天记录读取 CLI 工具"
authors = ["xiaotianxt"]
repository = "https://github.com/xiaotianxt/tgreader"
license = "MIT"
keywords = ["telegram", "telegram", "chat", "decrypt", "sqlcipher"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "tgreader"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
md-5 = "0.10"
hex = "0.4"
cipher = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
