[package]
name = "tg"
version = "1.4.6"
edition = "2021"
description = "macOS Telegram 聊天记录读取 CLI 工具"
authors = ["xiaotianxt"]
repository = "https://github.com/xiaotianxt/tg"
license = "MIT"
keywords = ["telegram", "chat", "decrypt", "sqlcipher", "backup"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "tg"
path = "src/main.rs"

[[bin]]
name = "try_decrypt"
path = "src/bin/try_decrypt.rs"
required-features = ["debug-tools"]

[features]
default = []
debug-tools = []

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
md-5 = "0.10"
hex = "0.4"
cipher = "0.5"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
zstd = "0.13"
log = "0.4"

[build-dependencies]
cc = "1"
